# sfmlsort

SORTINGVISUSFML/: CMakeLists.txt  main.cpp  otherfunctionss.cpp  otherfunctionss.h  sortingalgorithms.cpp  sortingalgorithms.h
SORTINGVISUSFML/SFMLSORTMAIN/: instructions.txt
